--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "type": "shell",
       "label": "C/C++: clang++-6.0 build active file",
-      "command": "ccache clang++ -std=c++17 main.cpp -o main; echo -----Build Complete-----; ./main; rm -f main",
+      "command": "make -j",
       "options": {
         "cwd": "${workspaceFolder}"
       },
