--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,5 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      
+    # install boost C++
+    - name: boost
+      run: sudo apt update && sudo apt install -yq libboost-all-dev
+    
+    # compiling
     - name: make
       run: make
