add compile_command setting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.8)
-project(Compro)
+project("Compro")
 
-add_executable(main src/main)
+add_executable("main" "src/main")
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
