--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -3,21 +3,13 @@ name: C/C++ CI
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
 
-    # compiling
-    - name: make
-      run: make
-
-    # run
-    - name: run
-      run: make run
+    - name: run.sh
+      run: bash run.sh
