--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "C/C++: clang++ アクティブ ファイルのビルドとデバッグ",
+      "name": "C++ build & debug",
       "type": "cppdbg",
       "request": "launch",
       "program": "${fileDirname}/${fileBasenameNoExtension}",
@@ -12,7 +12,7 @@
       "environment": [],
       "externalConsole": true,
       "MIMode": "lldb",
-      "preLaunchTask": "C/C++: clang++ アクティブなファイルのビルド"
+      "preLaunchTask": "C++ build"
     }
   ]
 }
