--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,8 +6,14 @@
       "label": "C++ build",
       "command": "g++",
       "args": [
-        "-std=c++17",
+        "-std=gnu++20",
+        "-mtune=native",
         "-march=native",
+        "-Wall",
+        "-Wextra",
+        "-fconstexpr-depth=2147483647",
+        "-fconstexpr-loop-limit=2147483647",
+        "-fconstexpr-ops-limit=2147483647",
         "-Og",
         "-g",
         "-D DEBUG",
