--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "cwd": "${fileDirname}",
       "environment": [],
       "externalConsole": true,
-      "MIMode": "gdb",
+      "MIMode": "lldb",
       "preLaunchTask": "C++ build"
     }
   ]
