--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ac-library"]
 	path = ac-library
-	url = git@github.com:atcoder/ac-library.git
+	url = https://github.com/atcoder/ac-library.git
