--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,8 @@
         "-fconstexpr-depth=2147483647",
         "-fconstexpr-loop-limit=2147483647",
         "-fconstexpr-ops-limit=2147483647",
+        "-I",
+        "${workspaceFolder}/ac-library",
         "-Og",
         "-g",
         "-D DEBUG",
